force-app/main/default/objects/PMNotificationPartnerSets__x/PMNotificationPartnerSets__x.object-meta.xml
<CustomObject>
    <description>PMNotificationPartnerSets</description>
    <externalDataSource>AusNet_OData</externalDataSource>
    <externalName>PMNotificationPartnerSets</externalName>
    <label>PMNotificationPartnerSets</label>
    <pluralLabel>PMNotificationPartnerSets</pluralLabel>
</CustomObject>