force-app/main/default/objects/PMNotificationPartnerSets__x/fields/AddrNo__c.field-meta.xml
<CustomField>
    <fullName>AddrNo__c</fullName>
    <description>AddrNo</description>
    <externalDeveloperName>AddrNo</externalDeveloperName>
    <label>AddrNo</label>
    <length>128</length>
    <type>Text</type>
</CustomField>