force-app/main/default/objects/PMNotificationPartnerSets__x/fields/ChangedBy__c.field-meta.xml
<CustomField>
    <fullName>ChangedBy__c</fullName>
    <description>ChangedBy</description>
    <externalDeveloperName>ChangedBy</externalDeveloperName>
    <label>ChangedBy</label>
    <length>128</length>
    <type>Text</type>
</CustomField>