force-app/main/default/objects/PMNotificationPartnerSets__x/fields/ChAt__c.field-meta.xml
<CustomField>
    <fullName>ChAt__c</fullName>
    <description>ChAt</description>
    <externalDeveloperName>ChAt</externalDeveloperName>
    <label>ChAt</label>
    <length>128</length>
    <type>Text</type>
</CustomField>