force-app/main/default/objects/PMNotificationPartnerSets__x/fields/ChOn__c.field-meta.xml
<CustomField>
    <fullName>ChOn__c</fullName>
    <description>ChOn</description>
    <externalDeveloperName>ChOn</externalDeveloperName>
    <label>ChOn</label>
    <length>128</length>
    <type>Text</type>
</CustomField>