force-app/main/default/objects/PMNotificationPartnerSets__x/fields/Counter__c.field-meta.xml
<CustomField>
    <fullName>Counter__c</fullName>
    <description>Counter</description>
    <externalDeveloperName>Counter</externalDeveloperName>
    <label>Counter</label>
    <length>128</length>
    <type>Text</type>
</CustomField>