force-app/main/default/objects/PMNotificationPartnerSets__x/fields/CreatDate__c.field-meta.xml
<CustomField>
    <fullName>CreatDate__c</fullName>
    <description>CreatDate</description>
    <externalDeveloperName>CreatDate</externalDeveloperName>
    <label>CreatDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>