force-app/main/default/objects/PMNotificationPartnerSets__x/fields/DeleteFlag__c.field-meta.xml
<CustomField>
    <fullName>DeleteFlag__c</fullName>
    <description>DeleteFlag</description>
    <externalDeveloperName>DeleteFlag</externalDeveloperName>
    <label>DeleteFlag</label>
    <length>128</length>
    <type>Text</type>
</CustomField>