force-app/main/default/objects/PMNotificationPartnerSets__x/fields/ObjectNo__c.field-meta.xml
<CustomField>
    <fullName>ObjectNo__c</fullName>
    <description>ObjectNo</description>
    <externalDeveloperName>ObjectNo</externalDeveloperName>
    <label>ObjectNo</label>
    <length>128</length>
    <type>Text</type>
</CustomField>