force-app/main/default/objects/PMNotificationPartnerSets__x/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <description>ObjectType</description>
    <externalDeveloperName>ObjectType</externalDeveloperName>
    <label>ObjectType</label>
    <length>128</length>
    <type>Text</type>
</CustomField>