force-app/main/default/objects/PMNotificationPartnerSets__x/fields/PartnRole__c.field-meta.xml
<CustomField>
    <fullName>PartnRole__c</fullName>
    <description>PartnRole</description>
    <externalDeveloperName>PartnRole</externalDeveloperName>
    <label>PartnRole</label>
    <length>128</length>
    <type>Text</type>
</CustomField>