force-app/main/default/objects/PMNotificationPartnerSets__x/fields/Parttimezo__c.field-meta.xml
<CustomField>
    <fullName>Parttimezo__c</fullName>
    <description>Parttimezo</description>
    <externalDeveloperName>Parttimezo</externalDeveloperName>
    <label>Parttimezo</label>
    <length>128</length>
    <type>Text</type>
</CustomField>