force-app/main/default/objects/PMNotificationPartnerSets__x/fields/PosTime__c.field-meta.xml
<CustomField>
    <fullName>PosTime__c</fullName>
    <description>PosTime</description>
    <externalDeveloperName>PosTime</externalDeveloperName>
    <label>PosTime</label>
    <length>128</length>
    <type>Text</type>
</CustomField>